syntax = "proto3";

option csharp_namespace = "WordServer.Protos";

service DailyWord {
	rpc GetWord (WordRequest) returns (WordResponse);
	rpc ValidateWord (WordToValidate) returns (ValidationResponse);
}

message WordRequest {
	string word = 1;
}

message WordResponse {
	string word = 1;
}

message WordToValidate {
	string word = 1;
}

message ValidationResponse {
	bool is_valid = 1;
}